' ctrl + shift + p -> plantuml:export current diagram

@startuml TextMUD_ClassDiagram

skinparam classAttributeIconSize 0
skinparam monochrome true
skinparam shadowing false

package "Core & Managers" {
    class GameManager <<Singleton>> {
        - std::unique_ptr<Player> player
        - std::unique_ptr<BattleManager> battle_manager
        - std::vector<std::unique_ptr<BaseScene>> scene_stack
        - SceneOp scene_op
        - SceneType next_scene
        - bool is_running
        - std::queue<Event> event_queue
        + static GameManager& GetInstance()
        + void Init()
        + void Run()
        + void Release()
        + void PushEvent(const Event& ev)
        + Player* GetPlayer() const
        + BattleManager* GetBattleManager() const
    }

    class RenderSystem <<Singleton>> {
        - HANDLE screen_buffers[2]
        - int current_buffer_idx
        + static RenderSystem& GetInstance()
        + void ClearBuffer()
        + void Draw()
        + void PrintText(int x, int y, std::string_view sv)
    }

    class UIManager <<Singleton>> {
        - std::vector<std::unique_ptr<BaseUI>> ui_list
        + static UIManager& GetInstance()
        + void AddMessage(GlobalUIType type, std::string_view msg)
        + void ClearMessage(GlobalUIType type)
        + void ClearAll(const std::vector<GlobalUIType>& ignore_list)
        + void Render()
        + void SetVisible(GlobalUIType type, bool value)
        + void SetAllVisible(bool value)
    }

    class MonsterPool <<Singleton>> {
        - std::vector<std::unique_ptr<Monster>> pool
        + static MonsterPool& GetInstance()
        + void Init(int capacity)
        + Monster* SpawnRandomMonster()
        + Monster* SpawnMonster(MonsterType type)
    }

    class BattleManager {
        - Player* player
        - std::vector<Monster*> monster_list
        - int total_exp
        - int total_gold
        + BattleManager(Player* p)
        + void StartBattle(const std::vector<Monster*>& monsters)
        + void PlayerAttack(int target_idx)
        + void MonsterAttack()
        + bool IsBattleOver() const
        + bool IsPlayerVictory() const
        + void DistributeReward()
    }
}

package "Data & Structs" {
    struct Event {
        + EventType type
        + union { int key_code; SceneType next_scene; }
    }

    class Status {
        - std::array<int, COUNT> status
        - std::array<int, COUNT> bonus_status
        + Status(...) 
        + int TakeDamage(int dmg)
        + bool IsDead() const
        + void Heal(int amount)
        + void MaxHeal()
        + void AddBonus(StatusType type, int amount)
        + void RemoveBonus(StatusType type, int amount)
        + int operator[](StatusType type) const
        + int GetTotal(StatusType type) const
        + int GetHp() const
    }
}

package "Entities" {
    abstract class Entity {
        # std::string name
        # std::string image
        # bool is_visible
        + virtual void Render() = 0
    }

    class NPC {
        + void Render() override
    }

    abstract class BattleEntity {
        # Status status
        + virtual void Render() = 0
        + int TakeDamage(int dmg)
        + bool IsDead() const
        + const Status& GetStatus() const
        + Status& GetStatus()
    }

    class Player {
        - int level
        - int exp
        - int gold
        - std::vector<std::unique_ptr<Item>> inventory
        - std::array<Equipment*, COUNT> equipment_slots
        + void Heal(int amount)
        + void MaxHeal()
        + void AddItem(std::unique_ptr<Item> item)
        + void RemoveItem(int index)
        + void Equip(Equipment* equipment)
        + void UnEquip(EquipmentSlot slot)
        + Equipment* GetEquippedItem(EquipmentSlot slot) const
        + void GainExp(int amount)
    }

    class Monster {
        - int reward_gold
        - int reward_exp
        + void Render() override
        + void Spawn(...)
    }
}

package "Items" {
    abstract class Item {
        # std::string name
        # std::string description
        # int price
        # ItemType type
        + virtual void Use(Player* player) = 0
    }

    class Equipment {
        - EquipmentSlot slot
        - std::vector<std::pair<StatusType, int>> bonus_stat
        - bool is_equipped
        + void Use(Player* player) override
        + void SetBonusStat(const std::vector<std::pair<StatusType, int>>& stats)
    }

    class Consumable {
        - int amount
        + void Use(Player* player) override
    }

    class JunkItem {
        + void Use(Player* player) override
    }
}

package "UI System" {
    abstract class BaseUI {
        # int start_x
        # int start_y
        # int max_lines
        # int max_messages
        # bool is_visible
        # std::deque<std::string> messages
        + void AddMessage(std::string_view msg)
        + void Clear()
        + virtual void Render() = 0
    }

    class ScreenUI
    class MessageUI
    class LogUI
    class MinimapUI
    class CharacterUI
}

package "Scenes" {
    abstract class BaseScene {
        # std::array<std::unique_ptr<BaseUI>, COUNT> ui_list
        # bool is_opaque
        # Player* player
        + virtual void Init() = 0
        + virtual void ProcessEvent(const Event& e) = 0
        + virtual void Update(float delta_time) = 0
        + virtual void Render() = 0
        + virtual void RenderUI()
        + virtual void Release() = 0
        + virtual void SetUI()
        + virtual void SetMenu()
    }

    class TitleScene
    class TownScene
    class DungeonScene
    class BattleScene {
        - BattleManager* bm
        - std::vector<Monster*> monster_list
        - BattleState current_state
    }
}

' --- Relationships ---

' Inheritance
Entity <|-- NPC
Entity <|-- BattleEntity
BattleEntity <|-- Player
BattleEntity <|-- Monster

Item <|-- Equipment
Item <|-- Consumable
Item <|-- JunkItem

BaseUI <|-- ScreenUI
BaseUI <|-- MessageUI
BaseUI <|-- LogUI
BaseUI <|-- MinimapUI
BaseUI <|-- CharacterUI

BaseScene <|-- TitleScene
BaseScene <|-- TownScene
BaseScene <|-- DungeonScene
BaseScene <|-- BattleScene

' Composition & Aggregation
GameManager *-- Player : owns
GameManager *-- BattleManager : owns
GameManager *-- BaseScene : owns stack
UIManager *-- BaseUI : owns
MonsterPool *-- Monster : owns pool
BattleEntity *-- Status : composition

' Item Relationships
Player *-- Item : owns (inventory)
Player o-- Equipment : references (equipment_slots)

' References (Pointers)
BattleManager o-- Player : references
BattleManager o-- Monster : references (monster_list)

BattleScene o-- BattleManager : references
BattleScene o-- Monster : references (monster_list)

BaseScene o-- Player : references
BaseScene *-- BaseUI : owns local UIs

GameManager ..> Event : uses
BaseScene ..> Event : processes

@enduml